--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -73,7 +73,7 @@
             <div class="w-full md:w-1/2 px-4 mb-8 md:mb-0">
                 <div class="flex flex-wrap -mx-2 mb-8">
                     <div class="w-full md:w-1/2 px-2 mb-4 md:mb-0">
-                        <a href="{% url 'shop' %}" class="w-full bg-gray-200 text-black font-semibold py-2 px-4 rounded hover:bg-gray-300 inline-block text-center">Continue Shopping</a>
+                        <a href="{% url 'pharmacy' %}" class="w-full bg-gray-200 text-black font-semibold py-2 px-4 rounded hover:bg-gray-300 inline-block text-center">Continue Shopping</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
         <div class="text-center py-12">
             <h2 class="text-2xl font-semibold mb-4">Your Cart is Empty</h2>
             <p class="mb-8">Looks like you haven't added any items to your cart yet.</p>
-            <a href="{% url 'shop'%}" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded hover:bg-blue-700">Start Shopping</a>
+            <a href="{% url 'pharmacy' %}" class="bg-blue-600 text-white font-semibold py-2 px-4 rounded hover:bg-blue-700">Start Shopping</a>
         </div>
         {% endif %}
     </div>
