--- a/store/templates/contact.html
+++ b/store/templates/contact.html
@@ -5,7 +5,7 @@
             <div class="container mx-auto">
                 <div class="flex">
                     <div class="w-full">
-                        <a href="index.html">Home</a> <span class="mx-2">/</span> <strong>Contact</strong>
+                        <a href="{% url 'home' %}">Home</a> <span class="mx-2">/</span> <strong>Contact</strong>
                     </div>
                 </div>
             </div>
@@ -24,21 +24,21 @@
                                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="first-name">
                                     First Name <span class="text-red-500">*</span>
                                 </label>
-                                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="first-name" type="text">
+                                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="first-name" type="text" required>
                             </div>
                             <div class="w-full md:w-1/2 px-3">
                                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="last-name">
                                     Last Name <span class="text-red-500">*</span>
                                 </label>
-                                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="last-name" type="text">
+                                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="last-name" type="text" required>
                             </div>
                         </div>
                         <div class="flex flex-wrap -mx-3 mb-6">
                             <div class="w-full px-3">
-                                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="email">
+                                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 " for="email">
                                     Email <span class="text-red-500">*</span>
                                 </label>
-                                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="email" type="email">
+                                <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="email" type="email" required>
                             </div>
                         </div>
                         <div class="flex flex-wrap -mx-3 mb-6">
